--- a/cython/Makefile
+++ b/cython/Makefile
@@ -1,7 +1,8 @@
 all:
 	python3 setup.py build_ext --inplace
-	# cython -a initial_recombination.pyx
-	# cython -a general_and_initial_recombination.pyx
 	rm -r build
 	rm *.c
+	# ignore the html files
+	# cython -a initial_recombination.pyx
+	# cython -a general_and_initial_recombination.pyx
 	# rm *.html
