skeleton of pytest suite

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,3 +41,6 @@ jobs:
       - name: Run example script
         run: python example_single_track.py
         working-directory: hadrons
+
+      - name: Install test dependencies
+        run: pip install pytest
