fix github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,4 +46,4 @@ jobs:
         run: pip install pytest
 
       - name: Run unit and integration tests
-        run: pip -m pytest
+        run: python -m pytest
