expand gitignore+improve tests

--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@ cython_debug/
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
+testpad.ipynb
+hadrons/IonTracks.csv
+hadrons/Jaffe_example.pdf
+hadrons/Jaffe_theory_and_IonTracks.pdf
