--- a/setup.cfg
+++ b/setup.cfg
@@ -15,8 +15,7 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.8
-install_requires =
-    scipy 
+install_requires = file: requirements.txt
 
 [pycodestyle]
 max-line-length=120
