--- a/setup.cfg
+++ b/setup.cfg
@@ -1,35 +1,29 @@
 [metadata]
-name = cython-package-example
-version = 0.1.6
-description = Example of a package with Cython extensions
+name = IonTracks
+version = 1.0.0
+description = IonTracks
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = MIT
-author = Federico Stra
-author_email = stra.federico@gmail.com
-url = https://github.com/FedericoStra/cython-package-example
-download_urls = https://pypi.org/project/cython-package-example
+author = Jeppe Brage
+author_email = jeppebrage@gmail.com
+url = https://github.com/jbrage/IonTracks
 project_urls =
-	Documentation = https://github.com/FedericoStra/cython-package-example
-	Code = https://github.com/FedericoStra/cython-package-example
-	Issue tracker = https://github.com/FedericoStra/cython-package-example/issues
+	Documentation = https://github.com/jbrage/IonTracks
+	Code = https://github.com/jbrage/IonTracks
+	Issue tracker = https://github.com/jbrage/IonTracks/issues
 classifiers =
-	Development Status :: 1 - Planning
-	License :: OSI Approved :: MIT License
 	Intended Audience :: Education
 	Intended Audience :: Science/Research
 	Topic :: Scientific/Engineering
-	Topic :: Scientific/Engineering :: Mathematics
 	Natural Language :: English
 	Operating System :: OS Independent
 	Programming Language :: C
 	Programming Language :: Cython
 	Programming Language :: Python
 	Programming Language :: Python :: 3
-	Programming Language :: Python :: 3.4
-	Programming Language :: Python :: 3.5
-	Programming Language :: Python :: 3.6
-	Programming Language :: Python :: 3.7
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
 	Programming Language :: Python :: 3 :: Only
 	Programming Language :: Python :: Implementation :: CPython
 
@@ -38,14 +32,12 @@ zip_safe = False
 python_requires = >=3.8
 packages = find:
 
-
 [options.package_data]
 * = *.pxd, *.h
 cypack = data/*
 
 [build_ext]
 inplace = 1
-
 
 [pycodestyle]
 max-line-length=120
