--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,44 @@
+[metadata]
+name = IonTracks
+version = 1.0.0
+description = IonTracks
+long_description = file: README.md
+long_description_content_type = text/markdown
+author = Jeppe Brage
+author_email = jeppebrage@gmail.com
+url = https://github.com/jbrage/IonTracks
+project_urls =
+	Documentation = https://github.com/jbrage/IonTracks
+	Code = https://github.com/jbrage/IonTracks
+	Issue tracker = https://github.com/jbrage/IonTracks/issues
+classifiers =
+	Intended Audience :: Education
+	Intended Audience :: Science/Research
+	Topic :: Scientific/Engineering
+	Natural Language :: English
+	Operating System :: OS Independent
+	Programming Language :: C
+	Programming Language :: Cython
+	Programming Language :: Python
+	Programming Language :: Python :: 3
+	Programming Language :: Python :: 3.8
+	Programming Language :: Python :: 3.9
+	Programming Language :: Python :: 3.10
+	Programming Language :: Python :: 3 :: Only
+	Programming Language :: Python :: Implementation :: CPython
+
+[options]
+zip_safe = False
+python_requires = >=3.8
+packages = find:
+
+[options.package_data]
+* = *.pxd, *.h
+cypack = data/*
+
+[build_ext]
+inplace = 1
+
 [pycodestyle]
 max-line-length=120
 
