--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
         run: pip install pytest
 
       - name: Run unit and integration tests
-        run: python -m pytest
+        run: python -m pytest -n 2
