--- a/.gitignore
+++ b/.gitignore
@@ -191,6 +191,6 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 testpad.ipynb
-hadrons/IonTracks.csv
-hadrons/Jaffe_example.pdf
-hadrons/Jaffe_theory_and_IonTracks.pdf
+IonTracks.csv
+Jaffe_example.pdf
+Jaffe_theory_and_IonTracks.pdf
