Added test cases generator for ks_initial_IonTracks (#22)
* Added test cases generator for ks_initial_IonTracks

* fstring path to path object

Co-authored-by: Leszek Grzanka <grzanka@agh.edu.pl>

* fstring path to path object in functions.py

Co-authored-by: Leszek Grzanka <grzanka@agh.edu.pl>

* fstring path to path object in generate_expected_results.py

Co-authored-by: Leszek Grzanka <grzanka@agh.edu.pl>

* cleanup + small fixes

* Rename test_hadrons_single_track.py + fixturize tests

* expand gitignore+improve tests

* os.unlink(path) -> path.unlink()

* test mostly done (needs testing)

* override tooltip change

* added conftest.py

* remove single_track_PDEsolver_input fixture, reduce testcase

* tests fixed for hardcoded test data

* Change test data

* fstring to path obj

* improve pdeSovler test params and test

* add TODO

* fix test_single_track imports + cleanup

* fix imports in functions.py

* fix imports in functions.py v2

* test pipeline fix attempt

* test pipeline fix attempt 2

* test pipeline fix attempt 3

* test pipeline debug

* test pipeline debug2

* package testing (#30)

* skeleton

* imports improved

* more tests

* testing

* test

* cleaning

* compilation removed

* fix numpy import

* ff

* test

* faster tests

* readme update

* cleanup + saniti tests

* add pytest-xdist for parallel tests

* cleanup

* Update setup.py

Co-authored-by: Leszek Grzanka <grzanka@agh.edu.pl>

* rest -> kwargs in functions.py

* adjust gitpod cfg

Co-authored-by: Leszek Grzanka <grzanka@agh.edu.pl>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,22 +28,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies and iontracks package
         run: |
           python --version
           pip --version
-          pip install -r requirements.txt
+          CYTHONIZE=1 pip install --editable .
 
-      - name: Compile Cython modules
-        run: make -j2
-        working-directory: hadrons/cython_files
-          
       - name: Run example script
         run: python example_single_track.py
         working-directory: hadrons
 
       - name: Install test dependencies
-        run: pip install pytest
+        run: pip install pytest pytest-xdist
 
       - name: Run unit and integration tests
-        run: python -m pytest
+        run: python -m pytest -n 2
