--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
        matrix:
          python-version: ['3.8', '3.9', '3.10']
-         platform: [ubuntu-latest]  # TODO add Windows as well
+         platform: [ubuntu-latest, windows-latests, ubuntu-22.04] 
     steps:
       - uses: actions/checkout@v3
 
