add geis_utils.py, refactor python single_track_PDEsolver to a class

--- a/.gitignore
+++ b/.gitignore
@@ -185,7 +185,7 @@ cython_debug/
 
 # Support for Project snippet scope
 .vscode/*.code-snippets
-
+.vscode
 # Ignore code-workspaces
 *.code-workspace
 
