--- a/setup.cfg
+++ b/setup.cfg
@@ -39,8 +39,7 @@ cypack = data/*
 [build_ext]
 inplace = 1
 
-[pycodestyle]
-max-line-length=120
-
 [flake8]
 max-line-length=120
+import-order-style = google
+ignore = E203, W503, E501
