--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,5 @@ electrons/cython/pulsed_e_beam.c
 hadrons/cython_files/continuous_beam.c
 .gitignore
 hadrons/cython_files/initial_recombination.c
+numba_electrons_times.npy
+python_electrons_times.npy
